<resources>
    <string name="app_name">amohamed-FeelsBook</string>
    <string name="anger">(╬ಠ益ಠ)\nAnger</string>
    <string name="joy">(^ ω ^)\nJoy</string>
    <string name="sad">(ಥ﹏ಥ)\nSad</string>
    <string name="fear">(⊙＿⊙)\nFear</string>
    <string name="love">(ღ˘⌣˘ღ)\nLove</string>
    <string name="surprise">(・о・)\nSurprise</string>
    <string name="enterComment">Enter comment. (optional)</string>
    <string name="SaveEdit">Save</string>
    <string name="delete">Delete</string>
    <string name="SetTime">Set Date</string>
    <string name="title_editEmotion">Edit Past Emotion</string>>
    <string name="EditDateString">Edit Date</string>



</resources>
