<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="181dp"
        android:layout_height="82dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="188dp"
        android:layout_toEndOf="@+id/deleteButton"
        android:text="@string/SaveEdit" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="181dp"
        android:layout_height="82dp"
        android:layout_alignEnd="@+id/editDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="189dp"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/emotionText"
        android:layout_width="247dp"
        android:layout_height="107dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="29dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/editDate"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_alignStart="@+id/emotionText"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="136dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="242dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="189dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editDate"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/editDate"
        android:text="@string/EditDateString" />


</RelativeLayout>